fix(navbar): adjust spacing between title and content (#6599)

--- a/src/common/navigation/components/Navbar.less
+++ b/src/common/navigation/components/Navbar.less
@@ -168,4 +168,8 @@
     .navbar-cta-group {
         margin-top: var(--layout-spacing-xs);
     }
+
+    .noHeader {
+        margin-top: -16px;
+    }
 }
